[tool.poetry]
name = "sshpasslog"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
paramiko = "==3.2.0"
ip3country = "^0.2.0"
requests = "^2.31.0"
apt-repo = "^0.5"


[tool.poetry.group.dev.dependencies]
types-paramiko = "==3.2.0.0"
types-requests = "^2.31.0.1"
ruff = "^0.0.280"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["F", "E", "W", "C90", "I", "N", "D", "UP", "YTT", "ASYNC", "S", "BLE", "FBT", "B", "A", "COM"]
ignore = ["E501", "D10", "D203", "D212", "D213", "D401", "D404", "BLE001"]
