[tool.poetry]
name = "sshpasslog"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
paramiko = "==3.2.0"
ip3country = "^0.3.0"
requests = "^2.31.0"
apt-repo = "^0.5"


[tool.poetry.group.dev.dependencies]
types-paramiko = "==3.2.0.0"
types-requests = "^2.31.0.1"
ruff = "^0.11.5"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "D", "UP", "YTT", "ASYNC", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "RUF"]
ignore = ["E501", "D10", "D203", "D212", "D213", "D401", "D404", "BLE001", "G00"]
unfixable = ["ERA"]
